Minor CSS fixes

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -65,6 +65,11 @@
       "open_cart": "Open cart"
     }
   },
+  "products": {
+    "product": {
+      "sold_out": "Sold Out"
+    }
+  },
   "product": {
     "general": {
       "description": "Description",
